// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSwift > matches the multi-intent Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = "Create an idea"
  static let description = IntentDescription("Add a new idea")

  @Parameter(title: "title")
  var title: String

  func perform() async throws -> some IntentResult & ProvidesDialog & OpensIntent {
    let url = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(opensIntent: OpenURLIntent(url), dialog: "Your idea is ready")
  }
}

struct OpenInbox: AppIntent {
  static let title: LocalizedStringResource = "Open the inbox"



  func perform() async throws -> some IntentResult & ProvidesDialog & OpensIntent {
    let url = IntentLaneRoute.make(scheme: "example", path: "/inbox", query: [:])
    return .result(opensIntent: OpenURLIntent(url), dialog: "Open the inbox")
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: "Create an idea", systemImageName: "sparkles")
      AppShortcut(intent: OpenInbox(), phrases: [
        "Open the inbox in \\(.applicationName)"
      ], shortTitle: "Open the inbox", systemImageName: "sparkles")
  }
}
"
`;

exports[`generateSwift > matches the reference Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = "Create an idea"
  static let description = IntentDescription("Add a new idea")

  @Parameter(title: "title")
  var title: String

  func perform() async throws -> some IntentResult & ProvidesDialog & OpensIntent {
    let url = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(opensIntent: OpenURLIntent(url), dialog: "Your idea is ready")
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: "Create an idea", systemImageName: "sparkles")
  }
}
"
`;
